feat: implemented role permisions design

--- a/src/templates/errors/error_generic.html
+++ b/src/templates/errors/error_generic.html
@@ -31,8 +31,8 @@
                 Se ha producido un error inesperado. Por favor, intenta de nuevo.
             {% endif %}
         </p>
-        <a href="{% url 'home' %}" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
-            Volver al Inicio
+        <a href="../" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+            Volver atrás
         </a>
     </div>
 
