--- a/src/templates/profile/register_company.html
+++ b/src/templates/profile/register_company.html
@@ -22,7 +22,7 @@
                     <input type="text" name="username" id="id_username"
                         value="{{ form.username.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Nombre de Usuario" required>
+                        placeholder="{% translate 'Nombre de Usuario' %}" required>
                     {% if form.username.errors %}
                     <div class="text-red-500 text-sm">{{ form.username.errors.0 }}</div>
                     {% endif %}
@@ -33,7 +33,7 @@
                     <input type="text" name="company_name" id="id_company_name"
                         value="{{ form.company_name.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Nombre de la Empresa" required>
+                        placeholder="{% translate 'Nombre de la Empresa' %}" required>
                     {% if form.company_name.errors %}
                     <div class="text-red-500 text-sm">{{ form.company_name.errors.0 }}</div>
                     {% endif %}
@@ -44,7 +44,7 @@
                     <input type="text" name="nit" id="id_nit"
                         value="{{ form.nit.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="NIT" required>
+                        placeholder="{% translate 'NIT' %}" required>
                     {% if form.nit.errors %}
                     <div class="text-red-500 text-sm">{{ form.nit.errors.0 }}</div>
                     {% endif %}
@@ -55,7 +55,7 @@
                     <input type="text" name="business_type" id="id_business_type"
                         value="{{ form.business_type.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Tipo de Negocio" required>
+                        placeholder="{% translate 'Tipo de Negocio' %}" required>
                     {% if form.business_type.errors %}
                     <div class="text-red-500 text-sm">{{ form.business_type.errors.0 }}</div>
                     {% endif %}
@@ -66,7 +66,7 @@
                     <input type="text" name="country" id="id_country"
                         value="{{ form.country.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="País" required>
+                        placeholder="{% translate 'País' %}" required>
                     {% if form.country.errors %}
                     <div class="text-red-500 text-sm">{{ form.country.errors.0 }}</div>
                     {% endif %}
@@ -77,7 +77,7 @@
                     <input type="text" name="business_vertical" id="id_business_vertical"
                         value="{{ form.business_vertical.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Vertical de Negocio" required>
+                        placeholder="{% translate 'Vertical de Negocio' %}" required>
                     {% if form.business_vertical.errors %}
                     <div class="text-red-500 text-sm">{{ form.business_vertical.errors.0 }}</div>
                     {% endif %}
@@ -88,7 +88,7 @@
                     <input type="text" name="address" id="id_address"
                         value="{{ form.address.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Dirección" required>
+                        placeholder="{% translate 'Dirección' %}" required>
                     {% if form.address.errors %}
                     <div class="text-red-500 text-sm">{{ form.address.errors.0 }}</div>
                     {% endif %}
@@ -99,7 +99,7 @@
                     <input type="text" name="legal_representative" id="id_legal_representative"
                         value="{{ form.legal_representative.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Representante Legal" required>
+                        placeholder="{% translate 'Representante Legal' %}" required>
                     {% if form.legal_representative.errors %}
                     <div class="text-red-500 text-sm">{{ form.legal_representative.errors.0 }}</div>
                     {% endif %}
@@ -110,7 +110,7 @@
                     <input type="text" name="phone" id="id_phone"
                         value="{{ form.phone.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Teléfono" required>
+                        placeholder="{% translate 'Teléfono' %}" required>
                     {% if form.phone.errors %}
                     <div class="text-red-500 text-sm">{{ form.phone.errors.0 }}</div>
                     {% endif %}
@@ -121,7 +121,7 @@
                     <input type="email" name="email" id="id_email"
                         value="{{ form.email.value|default_if_none:'' }}"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Correo Electrónico" required>
+                        placeholder="{% translate 'Correo Electrónico' %}" required>
                     {% if form.email.errors %}
                     <div class="text-red-500 text-sm">{{ form.email.errors.0 }}</div>
                     {% endif %}
@@ -131,7 +131,7 @@
                     <label class="block text-sm font-medium text-gray-700" for="id_password1">{% translate "Contraseña" %}</label>
                     <input type="password" name="password1" id="id_password1"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Contraseña" required>
+                        placeholder="{% translate 'Contraseña' %}" required>
                     {% if form.password1.errors %}
                     <div class="text-red-500 text-sm">{{ form.password1.errors.0 }}</div>
                     {% endif %}
@@ -141,7 +141,7 @@
                     <label class="block text-sm font-medium text-gray-700" for="id_password2">{% translate "Confirmar Contraseña" %}</label>
                     <input type="password" name="password2" id="id_password2"
                         class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                        placeholder="Confirmar Contraseña" required>
+                        placeholder="{% translate 'Confirmar Contraseña' %}" required>
                     {% if form.password2.errors %}
                     <div class="text-red-500 text-sm">{{ form.password2.errors.0 }}</div>
                     {% endif %}
