--- a/src/templates/projects/calendar.html
+++ b/src/templates/projects/calendar.html
@@ -20,7 +20,7 @@
                 <label class="block text-primary_black font-medium" for="edit_name">{% translate "Nombre del Evento" %}</label>
                 <input type="text" name="name" id="edit_name"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                    placeholder="Nombre del evento" required>
+                    placeholder="{% translate 'Nombre del evento' %}" required>
             </div>
 
             <div>
@@ -41,7 +41,7 @@
                 <label class="block text-primary_black font-medium" for="edit_description">{% translate "Descripción" %}</label>
                 <textarea name="description" id="edit_description" rows="4"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                    placeholder="Descripción del evento"></textarea>
+                    placeholder="{% translate 'Descripción del evento' %}"></textarea>
             </div>
 
             <!-- Field to select reminder -->
@@ -84,7 +84,7 @@
                 <label class="block text-primary_black font-medium" for="id_name">{% translate "Nombre del Evento" %}</label>
                 <input type="text" name="name" id="id_name"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                    placeholder="Nombre del evento" required>
+                    placeholder="{% translate 'Nombre del evento' %}" required>
             </div>
 
             <div>
@@ -105,7 +105,7 @@
                 <label class="block text-primary_black font-medium" for="id_description">{% translate "Descripción" %}</label>
                 <textarea name="description" id="id_description" rows="4"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
-                    placeholder="Descripción del evento"></textarea>
+                    placeholder="{% translate 'Descripción del evento' %}"></textarea>
             </div>
 
             <!-- Field to select reminder -->
