--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -20,7 +20,7 @@
 
 
 	<!-- Header or navbar can go here -->
-	<div class="flex flex-col justify-start w-full">
+	<div class="flex flex-col justify-start w-full overflow-hidden">
 		{% block content %}
 		{% endblock %}
 	</div>
