--- a/src/templates/homepage/home.html
+++ b/src/templates/homepage/home.html
@@ -7,6 +7,10 @@
 
     {% include 'homepage/hero.html' %}
 
+    {% include 'homepage/vision.html' %}
+
+    {% include 'homepage/features.html' %}
+
     {% include 'homepage/footer.html' %}
 
 {% endblock %}
