feat: created the configuration for sending notifications with websockets

--- a/src/templates/navigation/top_bar_controls.html
+++ b/src/templates/navigation/top_bar_controls.html
@@ -35,6 +35,8 @@
         <a href="/profile/notifications"
             class="p-2 border border-primary_lightest bg-white rounded-full hover:shadow-lg transition-transform duration-300 hover:scale-110">
             {% include "icon/bell.html" with w="24" h="24" %}
+            <span id="notification-counter" class="bg-red-500 text-white rounded-full text-xs px-2 ">0</span> 
+            <!-- ARREGLAR LA UI DE DONDE VA LA NOTIFICACION  -->
         </a>
 
         <!-- Configuración -->
